syntax = "proto3";

message Commodity {
  string name = 1;
  int64 buy_price = 2;
  int64 sell_price = 3;
  int64 stock = 4;
  int64 demand = 5;
}

message ShipPart {
  string name = 1;
  string quality = 2;
}

message Settlement {
  message Economy {
    int64 id = 1;
    string type = 2;
    string sub_type = 3;
  }

  message Metadata {
    string type = 1;
    float distance = 2;
    string allegiance = 3;
    int64 controlling_faction = 4;
    string government = 5;
  }

  message ParentBody {
    int64 id = 1;
    string name = 2;
    float latitude = 3;
    float longitude = 4;
  }

  message Services {
    bool market = 1;
    bool shipyard = 2;
    bool outfitting = 3;
    repeated string other = 4;
    repeated Commodity commodities = 5;
    repeated ShipPart ship_parts = 6;
    repeated string ships = 7;
  }

  int64 id = 1;
  int64 system_id = 2;
  string name = 3;
  Metadata metadata = 4;
  Economy economy = 5;
  Services services = 6;
  ParentBody parent = 7;
  int64 updated = 8;
}
